{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 186,
  "lineage": "702ab770-007b-0dc6-5426-98baabe0194d",
  "resources": [
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "terra-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:789320977148:loadbalancer/tf-lb-20201119165952088500000001",
            "availability_zones": [
              "us-east-1f"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "tf-lb-20201119165952088500000001-1423398566.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-lb-20201119165952088500000001",
            "idle_timeout": 400,
            "instances": [
              "i-0d096f75de0fe6027"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tf-lb-20201119165952088500000001",
            "security_groups": [
              "sg-0e727eff6ab3ac932"
            ],
            "source_security_group": "789320977148/terra_sg",
            "source_security_group_id": "sg-0e727eff6ab3ac932",
            "subnets": [
              "subnet-06c5d9ed8d88aaf93"
            ],
            "tags": {
              "Name": "terra-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2.aws_instance.terra_ec2",
            "module.vpc.aws_security_group.terra_sg",
            "module.vpc.aws_subnet.terra_subnets1",
            "module.vpc.aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terra_ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dba2cb6798deb6d8",
            "arn": "arn:aws:ec2:us-east-1:789320977148:instance/i-0d096f75de0fe6027",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d096f75de0fe6027",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-038a2f71cc628dd62",
            "private_dns": "ip-10-0-0-18.ec2.internal",
            "private_ip": "10.0.0.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02d9415b62e80ce67",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c5d9ed8d88aaf93",
            "tags": {
              "Name": "terra_ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e727eff6ab3ac932"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.terra_sg",
            "module.vpc.aws_subnet.terra_subnets1",
            "module.vpc.aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terra_ec2-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dba2cb6798deb6d8",
            "arn": "arn:aws:ec2:us-east-1:789320977148:instance/i-0a0b9b1651cbcfc26",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0b9b1651cbcfc26",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08edd2401d3090602",
            "private_dns": "ip-10-0-0-238.ec2.internal",
            "private_ip": "10.0.0.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-056b8de931695d057",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d52d7b2707be3d0",
            "tags": {
              "Name": "terra_ec2-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e727eff6ab3ac932"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.terra_sg",
            "module.vpc.aws_subnet.terra_subnets2",
            "module.vpc.aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789320977148:internet-gateway/igw-0347394275ff063ed",
            "id": "igw-0347394275ff063ed",
            "owner_id": "789320977148",
            "tags": {
              "Name": "terra_igw"
            },
            "vpc_id": "vpc-02c43c5c48b3a253f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra_rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-049da5d56c701c20a",
            "owner_id": "789320977148",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0347394275ff063ed",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra_rtb"
            },
            "vpc_id": "vpc-02c43c5c48b3a253f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.terra_igw",
            "module.vpc.aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_sub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f9d5f7b79564ed0",
            "route_table_id": "rtb-049da5d56c701c20a",
            "subnet_id": "subnet-06c5d9ed8d88aaf93"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.terra_igw",
            "module.vpc.aws_route_table.terra_rtb",
            "module.vpc.aws_subnet.terra_subnets1",
            "module.vpc.aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_sub1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081b57ca17f794054",
            "route_table_id": "rtb-049da5d56c701c20a",
            "subnet_id": "subnet-08d52d7b2707be3d0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.terra_igw",
            "module.vpc.aws_route_table.terra_rtb",
            "module.vpc.aws_subnet.terra_subnets2",
            "module.vpc.aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789320977148:security-group/sg-0e727eff6ab3ac932",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e727eff6ab3ac932",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terra_sg",
            "name_prefix": "",
            "owner_id": "789320977148",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c43c5c48b3a253f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnets1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789320977148:subnet/subnet-06c5d9ed8d88aaf93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.0/25",
            "id": "subnet-06c5d9ed8d88aaf93",
            "map_public_ip_on_launch": false,
            "owner_id": "789320977148",
            "tags": {
              "Name": "terra_subnet1a"
            },
            "vpc_id": "vpc-02c43c5c48b3a253f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnets2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789320977148:subnet/subnet-08d52d7b2707be3d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.128/25",
            "id": "subnet-08d52d7b2707be3d0",
            "map_public_ip_on_launch": false,
            "owner_id": "789320977148",
            "tags": {
              "Name": "terra_subnet2b"
            },
            "vpc_id": "vpc-02c43c5c48b3a253f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789320977148:vpc/vpc-02c43c5c48b3a253f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0b346b999eb9e3e15",
            "default_route_table_id": "rtb-0555da1aa96f38f28",
            "default_security_group_id": "sg-0b89eb4368be0bea8",
            "dhcp_options_id": "dopt-49881433",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02c43c5c48b3a253f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0555da1aa96f38f28",
            "owner_id": "789320977148",
            "tags": {
              "Name": "terra_vpc"
            }
          }
        }
      ]
    }
  ]
}